remove references to census snapshot code